# primer-agent

./: .gitignore  README.md  pyproject.toml
src/primer_agent/: auth.py  client.py  config.py  server.py
src/primer_agent/prompts/: __init__.py  actions.py  discovery.py
src/primer_agent/resources/: __init__.py  briefings.py  config.py  documents.py  workspaces.py
src/primer_agent/tools/: __init__.py  chat.py  create_briefing.py  create_workspace.py  search.py
